# bib2graph

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_DISCLOSURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  VERSIONING.md  analisis_bibliometrico.ipynb  analisis_calidad_datos.ipynb  analisis_estructural_redes.ipynb  main.py  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/agents/: architect.md  coder.md  verifier.md
.claude/commands/: retro-ciclo.md
.claude/hooks/: fence.py  guard.py
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml  release-please.yml
analisis/: analisis_bibliometrico.ipynb  analisis_calidad_datos.ipynb  analisis_estructural_redes.ipynb
bib2graph/: __init__.py  __main__.py  analisis_red.py  cli.py  config.py  consigue_los_articulos.py  enriquecimiento.py  main.py  models.py
bib2graph/src/: analisis_red.py  consigue_los_articulos.py  enriquecimiento.py  models.py
data/: Citación semiconductores comercio internacional.csv  Citación semiconductores comercio internacional.txt
docs/: API.md  ARCHITECTURE.md  PRD.md  RELEASE_TEMPLATE.md  ROADMAP.md  ai-disclosure.md  contributing.md  critica-base.md  index.md  metodología.md  versioning.md
docs/Notas/: 01-lecciones-v0.md  04-direccion-ia-in-the-loop.md  05-ciclo-investigacion-humano.md  05-sandbox-ied.md  06-critica-as-built-v0.2.md  07-frontend-tool-for-thought.md  08-referentes-frontend.md  09-sesion-qa-prueba-ecologia-valoraciones.md  10-sintesis-contextualizacion-gui.md  11-gestion-trabajo-github.md  12-arquitectura-gui-encuadre.md  13-continuacion-sesion-valoraciones.md  14-sesion-e2e-anomalias-ml.md  15-cli-capa-lectura-analisis.md  16-retroalimentacion-gui-mvp.md  17-validacion-tercero-gate34.md  18-flujo-canonico-biblioteca.md  19-qa-cli-superficie-limites.md  20_ciclo_investigacion_hallazgos_teoricos.md  21-descomposicion-tests-poda.md  22-frontera-y-alcance-de-bib2graph.md  23-RETROALIMENTACION_bib2graph_agente.md  24-referente-snowballing-comparacion.md  25-multiproveedor-requerimientos.md  26-retroalimentacion-cli-agent-native.md  27-recibo-de-demo-functor-honesto.md  28-marco-software-donde-nos-paramos.md  29-backlog-sinergias-plan-0_12_0.md  29-jubilar-notas-debate-a-discussions.md  30-paper-joss-doi-citable.md  31-feedback_bib2graph.md  critica-base.md  metodología.md  referentes.md
docs/ROADMAP/: 01-nucleo-v0.1.md  02-fuentes-forrajeo-cli-v0.2.md  03-remediacion-r1-r5-v0.3.md  04-lo-que-viene.md  05-gui.md  README.md
docs/_archivo/: 06-definicion-producto-v1.md  07-decisiones-abiertas-v1.md  README.md
docs/decisiones/: 0001-herramienta-reutilizable.md  0002-modelo-agnostico-backend.md  0003-persistencia-opcional.md  0004-enriquecimiento-opcional.md  0005-dependencias-extras.md  0006-tabla-canonica-y-networkspec.md  0007-openalex-backbone.md  0008-wedge-forrajeo.md  0009-biblioteca-viva-duckdb.md  0010-agente-native-columna.md  0011-thesaurus-multilingue.md  0012-openalex-credenciales.md  0013-identidad-hash-merge-corpus.md  0014-proyeccion-redes-pesos-asortatividad.md  0015-corpus-tabular-backend.md  0016-maquina-estados-lazo.md  0017-reproducibilidad-historia-snapshot.md  0018-source-agnostico-calidad.md  0019-concurrencia-diferida.md  0020-metodo-forrajeo-scent-filtros-reject.md  0021-cli-agente-native-contrato.md  0022-producto-sin-ia-generativa.md  0023-capa-constants-modelos-schema.md  0024-orden-d3-columna-secuencia-duckdb.md  0025-enricher-cocitacion-openalex.md  0026-dedup-fuzzy-determinista.md  0027-pivote-posicionamiento-gui-local.md  0028-arquitectura-gui-api-capa-servicios.md  0029-workspace-por-investigacion.md  0030-ecuacion-declarativa-corpus-ejemplo.md  0031-preprocesamiento-automatico-en-ingesta.md  0032-capa-servicios-duena-del-flujo.md  0033-producto-library-centric-grafo-proyeccion.md  0034-etiquetado-tabla-tags-lateral.md  0035-ingesta-multipuerta-resolucion-doi.md  0036-identidad-source-id-agnostica-doi-ancla.md  0037-superficie-cli-10-verbos-ciclo.md  0038-destino-verbos-huerfanos-0037.md  0039-skill-comando-meta-distribucion.md  0040-retiro-gui-local.md  (+12 more)
docs/features/: A-sembrar.feature  B-forrajear.feature  C-curar.feature  D-redes.feature  E-reproducibilidad-agente.feature  README.md
docs/getting-started/: installation.md  quickstart.md
docs/guias/: curacion-prisma.md  ecuacion-busqueda.md  forrajeo.md  index.md  leer-redes.md  reporte-estado-del-arte.md  reporte.md
docs/reference/: cli.md  glosario.md  python-api.md
docs/tutoriales/: claude-code.md  index.md  primer-mapa.md  sota-completo.md
examples/bibtex/: README.md  sample.bib
examples/valoraciones/: README.md  build_corpus.py  corpus.parquet  curacion.csv  equation.yaml
exploracion/: README.md  informe_ied.md  informe_ied_lectura_1.md  informe_ied_lectura_2.md  requirements-exploracion.txt
exploracion/datos/: corpus_ied.csv  corpus_ied.parquet  openalex_ied.csv  semillas_ied.bib  semillas_ied.csv  thesaurus_ied.json
exploracion/scripts/: 01_search_openalex.py  02_load_bibtex.py  03_merge_corpus.py  04_build_networks.py  05_metrics_report.py  06_apply_thesaurus.py  _schema.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
resultados/: corpus_summary.json
src/: analisis_red.py  consigue_los_articulos.py  enriquecimiento.py  models.py
src/bib2graph/: __init__.py  cli.py  constants.py  corpus.py  cycle.py  schemas.py  workspace.py
tests/: test_imports.py
tests/e2e/: test_oneshot_readiness.py
tests/fixtures/: minimal.bib  sample_works.json
tests/integration/: test_chain_forward_cocitation.py  test_openalex_exclude_integration.py
tests/unit/: test_analyzer.py  test_api.py  test_assortativity_d3.py  test_backends.py  test_backward_no_placeholders.py  test_bibtex_source_contrato.py  test_build_absorber_networks.py  test_build_thesaurus_flag.py  test_chain_preview.py  test_chain_since.py  test_cli.py  test_cli_json_option.py  test_cli_read.py  test_cli_read_top.py  (+57 more)
(+128 files in other folders)
