# pyproject.toml — bib2graph
#
# Núcleo construido (Hitos 1–6): biblioteca viva DuckDB + cliente OpenAlex
# sobre httpx (ADR 0007/0009), redes, sources, forrajeo y CLI b2g. Extras
# opt-in declarados; [bibtex] poblado, el resto vacío hasta su hito. Tooling
# LOCAL estándar (ruff, mypy, pytest, pre-commit, commitizen) configurado desde
# el día uno (ADR 0006/0010). CI (.github/workflows/ci.yml) y release-please
# (.github/workflows/release-please.yml) YA están conectados; la publicación a
# PyPI queda fuera por ahora (solo GitHub Releases). Ver VERSIONING.md.
#
# Ver:
#   - docs/ARCHITECTURE.md
#   - docs/API.md
#   - docs/ROADMAP/
#   - docs/decisiones/0007-openalex-backbone.md  (OpenAlex backbone)
#   - docs/decisiones/0009-biblioteca-viva-duckdb.md  (DuckDB en el núcleo)
#   - docs/decisiones/0005-dependencias-extras.md  (matriz de extras)

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "bib2graph"
version = "0.9.0"  # Hitos 7 (dedup) + 8 (co-citación). De acá en adelante el bump
                   # lo maneja release-please vía PR de release (CI ya conectado).
description = "Librería de Python para transformar corpus bibliográficos en redes bibliométricas reproducibles (co-citación, colaboración, co-ocurrencia)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Equipo bib2graph" },
]
keywords = ["bibliometrics", "co-citation", "network-analysis", "bibtex", "reproducible-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pyarrow>=15",
    # tabla canónica (ADR 0006)
    "pydantic>=2.6",
    # validación del wrapper Corpus y Manifest
    "networkx>=3.2",
    # grafos
    "click>=8.1",
    # CLI agente-native (ADR 0010)
    "tqdm>=4.66",
    # progreso
    "duckdb>=0.10",
    # biblioteca viva, persistencia por defecto (ADR 0009)
    "httpx>=0.27",
    # cliente OpenAlex backbone; testeable con MockTransport (ADR 0007)
    "python-louvain>=0.16",
    # comunidades Louvain; DECLARADO, nunca usado sin declarar (lección 7)
    "pyyaml>=6.0.3",
    # parser de specs declarativas (NetworkSpec YAML, Hito 9)
    "rapidfuzz>=3,<4",
    # dedup fuzzy determinista (core desde #88; antes extra [dedup])
]

[project.optional-dependencies]
# zotero/neo4j: ex-Hito 11, DESCARTADO (PO 2026-06-17). Se reabrirían como hito
# nuevo si hay demanda real; no se declaran como extras vacíos engañosos.
s2 = []
neo4j = []
viz = []
bibtex = [
    "bibtexparser>=1.4.4",
]
gui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/complexluise/bib2graph"
Repository = "https://github.com/complexluise/bib2graph"
Documentation = "https://github.com/complexluise/bib2graph/tree/main/docs"
Changelog = "https://github.com/complexluise/bib2graph/blob/main/CHANGELOG.md"
Issues = "https://github.com/complexluise/bib2graph/issues"

[project.scripts]
# CLI entry point. Hito 6: implementación real del CLI agente-native.
# El paquete bib2graph.cli (antes cli.py) expone main() en __init__.py.
b2g = "bib2graph.cli:main"
# Alias deprecado del ejecutable legado 'bib2graph' (ADR 0038, #165).
# Emite aviso a stderr y delega en main(). Se retira en 0.11.0.
bib2graph = "bib2graph.cli:main_bib2graph_alias"

# ----- Build (hatchling, src layout) --------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/bib2graph"]

# force-include: vende al wheel artefactos que hatchling omitiría por defecto.
# Solo el frontend GUI lo necesita: está gitignored (build artifact) → hatchling
# lo omite (ADR 0028 §B.1, G5). Requiere que `pnpm build` haya corrido ANTES de
# `uv build`.
#
# La skill vendida (src/bib2graph/skill/, Epic #188) NO va acá: es fuente
# commiteada bajo el paquete, así que `packages = ["src/bib2graph"]` ya la
# incluye. Agregarla a force-include la duplica y ROMPE el build
# ("A second file is being added to the wheel archive at the same path").
[tool.hatch.build.targets.wheel.force-include]
"src/bib2graph/gui/static" = "bib2graph/gui/static"

# El sdist incluye fuente, tests y docs para reproducibilidad, pero NO el sandbox
# de exploración (datos de investigación IED: CSV/parquet/graphml) ni los binarios
# pesados de referencia: son del repo, no del paquete distribuible.
[tool.hatch.build.targets.sdist]
exclude = [
    "exploracion",
    ".claude",
    "docs/Notas/03-referencia",
]

# ----- uv (gestor del proyecto) -------------------------------------------
# Dependencias de desarrollo gestionadas por uv: NO se publican en PyPI (a
# diferencia de un extra). `uv sync` las instala por defecto; `uv sync --no-dev`
# instala solo el núcleo. Agregar deps con `uv add` / `uv add --dev`.

[dependency-groups]
# PEP 735: reemplaza el deprecado [tool.uv] dev-dependencies (#125). uv instala
# el grupo `dev` por defecto en `uv sync`. Agregar deps con `uv add --dev`.
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "commitizen>=3.13",
    "types-tqdm",
    "types-networkx>=3.6.1.20260612",
    "types-pyyaml>=6.0.12.20260518",
]

# ----- Tooling ------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py311"
# exploracion/ es el sandbox de investigación (no es el paquete; ya excluido del
# sdist y del gate de mypy). Se excluye del lint/format para que CI y el gate local
# concuerden sobre el código publicable (src/ + tests/).
extend-exclude = [".venv", "build", "dist", "exploracion"]

[tool.ruff.lint]
# Reglas activas. Select conservador al ppio; se expande en Hito 2 cuando
# haya código real.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (orden de imports)
    "B",   # bugbear
    "UP",  # pyupgrade (sintaxis moderna)
    "SIM", # simplificaciones
    "RUF", # reglas ruff específicas
]
ignore = [
    "E501",  # line length (lo maneja ruff format)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts en tests están bien
"src/bib2graph/api/routers/*" = ["B008"]  # Depends() en defaults es el patrón canónico de FastAPI
"src/bib2graph/api/deps.py" = ["B008"]    # idem

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
# Cobertura gradual: el núcleo es estricto. Los overrides para extras con stubs
# faltantes (enrichers, stores.neo4j) se agregan cuando esos módulos existan.

[[tool.mypy.overrides]]
module = "bibtexparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapidfuzz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=bib2graph",
    "--cov-report=term-missing",
    "-m",
    "not network",
]
markers = [
    "unit: tests puros, sin red ni I/O (default)",
    "integration: tests con I/O local (duckdb/store); corren en el gate",
    "network: tests que requieren red real (p.ej. OpenAlex); excluidos del gate por defecto (correr con -m network)",
]

[tool.coverage.run]
branch = true
source = ["src/bib2graph"]
omit = [
    "src/bib2graph/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ----- Commitizen (Conventional Commits + versionado) --------------------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
# Mapeo de tipos a secciones del CHANGELOG (Keep a Changelog style).
update_changelog_on_bump = true
# Mensaje de bump cuando hay BREAKING.
bump_message = "bump: version $current_version → $new_version"
# Conventional Commits en español: tipos y descripciones.
# commitizen los acepta en inglés igual; los defaults son razonables.
